Primer versión funcional.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hola mundo
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>El camino de Valentín</title>
+  <meta charset="UTF-8">
+
+  <link rel="stylesheet" href="style.css?2">
+  <script src="main.js"></script>
+</head>
+
+<body>
+  
+  <h1>La llegada de Valentín</h1>
+
+  <table>
+    <tbody>
+    </tbody>
+
+
+  </table>
+</body>
+</html>
