Probando diferente viewport.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>El camino de Valentín</title>
   <meta charset="UTF-8">
 
+  <meta http-equiv="cleartype" content="on">
+  <meta name="viewport" content="width=device-width, initial-scale=0.7">
   <link rel="stylesheet" href="style.css?2">
   <script src="main.js"></script>
 </head>
