--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <link rel="stylesheet" href="style.css?2">
   <script src="main.js"></script>
+  <script src="load-sw.js"></script>
+
+  <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body>
-  
-  <h1>La llegada de Valentín</h1>
 
-  <table>
+  <div class="cabecera">
+    <div class="titulo">El camino de Valentín</div>
+
+    <img src="osito.png" width="90px"/>
+  </div>
+
+  <table id="tabla">
     <tbody>
     </tbody>
-
-
   </table>
 </body>
 </html>
