--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <meta http-equiv="cleartype" content="on">
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
-  <link rel="stylesheet" href="style.css?2">
-  <script src="main.js"></script>
-  <script src="load-sw.js"></script>
+  <link rel="stylesheet" href="style.css?v=3">
+  <script src="main.js?v=3"></script>
+  <script src="load-sw.js?v=4"></script>
 
   <link rel="manifest" href="manifest.json">
 
