Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="cabecera">
       <div>
         <div id="titulo" class="titulo">El camino de Valentín</div>
-        <div id="subtitulo" class="subtitulo"></div>
+        <div id="subtitulo" class="subtitulo">-</div>
       </div>
       <div class="contenedor-osito">
         <img id="osito" src="osito.png" class="" width="90px">
