--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="style.css?v=3">
-    <script src="main.js?v=4"></script>
+    <script src="main.js?v=5"></script>
     <script src="confetti.browser.min.js"></script>
     <script src="load-sw.js?v=4"></script>
     <link rel="manifest" href="manifest.json">
@@ -56,7 +56,7 @@
     <div class="cabecera">
       <div>
         <div id="titulo" class="titulo">El camino de Valentín</div>
-        <div id="subtitulo" class="subtitulo">:</div>
+        <div id="subtitulo" class="subtitulo"></div>
       </div>
       <div class="contenedor-osito">
         <img id="osito" src="osito.png" class="" width="90px">
